--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>상록에스 - 상록 Data Intelligence Center</title>
-    <meta name="description" content="델타레이크 기반의 엔터프라이즈 데이터 솔루션으로 비즈니스 인텔리전스를 혁신하는 상록에스 상록 Data Intelligence Center" />
+    <title>상록에스 - 상록 Big Data Intelligence Center</title>
+    <meta name="description" content="델타레이크 기반의 엔터프라이즈 데이터 솔루션으로 비즈니스 인텔리전스를 혁신하는 상록에스 상록 Big Data Intelligence Center" />
     <meta name="author" content="상록에스" />
 
-    <meta property="og:title" content="상록에스 - 상록 Data Intelligence Center" />
-    <meta property="og:description" content="델타레이크 기반의 엔터프라이즈 데이터 솔루션으로 비즈니스 인텔리전스를 혁신하는 상록에스 상록 Data Intelligence Center" />
+    <meta property="og:title" content="상록에스 - 상록 Big Data Intelligence Center" />
+    <meta property="og:description" content="델타레이크 기반의 엔터프라이즈 데이터 솔루션으로 비즈니스 인텔리전스를 혁신하는 상록에스 상록 Big Data Intelligence Center" />
     <meta property="og:type" content="website" />
   </head>
 
